# anomaly

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  LICENSE  NEWS  cmake.h.in
doc/: CMakeLists.txt
doc/man/: .gitignore  anomaly.1.in
src/: .gitignore  CMakeLists.txt  Detector.cpp  Detector.h  README  anomaly.cpp  anomaly.h  sigma.cpp  threshold.cpp
test/: CMakeLists.txt  errors.t  sample.t  stddev.t  template.t  threshold.t  version.t
test/basetest/: __init__.py  anomaly.py  utils.py
